[package]
edition = "2018"
name = "usn"
version = "2.3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
easy-ml = "1.8.1"
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
near-contract-standards = "=4.0.0-pre.7"
near-sdk = {version = "=4.0.0-pre.7", features = ["unstable"]}
partial-min-max = "0.4.0"
rand = {version = "0.8.5", default-features = false, features = ["std_rng"]}
uint = {version = "=0.9.0", default-features = false}

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
overflow-checks = true
panic = "abort"

[profile.sandbox]
inherits = "release"

[profile.testnet]
inherits = "release"

[profile.mainnet]
inherits = "release"

[features]
# Enables testnet configuration if expicitly stated.
# It makes the USN contract use a testnet oracle.
testnet = []

# Enables mainnet configuration if expicitly stated.
# It makes the USN contract use a main oracle.
mainnet = []
